# filedart

./: Cargo.toml  lmfao.txt
src/: args.rs  main.rs
src/commands/: mod.rs
src/commands/file/: construct_url.rs  mod.rs  upload.rs
src/commands/url/: change_url.rs  mod.rs  reset_url.rs  show_url.rs
src/file_functions/: config_file.rs  mod.rs
